# Asago

./: .pre-commit-config.yaml  README.md  pyproject.toml
asago/: __init__.py  amadeus_server.py  app.py  flight_assistant.py  run_servers.py  websearch_server.py
asago/config/: __init__.py  settings.py
asago/graph/: __init__.py  nodes.py  workflow.py
asago/models/: __init__.py  state.py
asago/prompts/: __init__.py  preference_extraction.txt  request_parser.txt  results_formatter.txt  templates.py
asago/services/: amadeus_service.py  llm_service.py
notebooks/: amadeus.ipynb
tests/: test_amadeus_api.py
