[project]
name = "asago"
version = "0.1.0"
description = ""
authors = [
    {name = "Sachin Nandakumar",email = "sachin.nandakumar@deecoob.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp (>=1.9.1,<2.0.0)",
    "openai (>=1.82.0,<2.0.0)",
    "duckduckgo-search (>=8.0.2,<9.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "amadeus (>=12.0.0,<13.0.0)",
    "streamlit (>=1.45.1,<2.0.0)"
]

[tool.poetry]
name = "asago"
packages = [{ include = "asago" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
