[project]
name = "asago"
version = "0.1.0"
description = ""
authors = [
    {name = "Sachin Nandakumar",email = "zaksaiplayground@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "mcp (>=1.9.1,<2.0.0)",
    "openai (>=1.82.0,<2.0.0)",
    "duckduckgo-search (>=8.0.2,<9.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "amadeus (>=12.0.0,<13.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "langgraph (>=0.4.7,<0.5.0)",
    "langchain-openai (>=0.3.18,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)"
]

[tool.poetry]
name = "asago"
packages = [{ include = "asago" }]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
types-requests = "^2.32.0.20250602"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
